WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
244208
REGRESSION(
253529@main
): 2X imported/w3c/web-platform-tests/mediacapture-record/ layout tests are failing
https://bugs.webkit.org/show_bug.cgi?id=244208
Summary
REGRESSION(253529@main): 2X imported/w3c/web-platform-tests/mediacapture-reco...
Hercules Hjalmarsson
Reported
2022-08-22 10:24:56 PDT
imported/w3c/web-platform-tests/mediacapture-record/MediaRecorder-peerconnection.https.html imported/w3c/web-platform-tests/mediacapture-record/MediaRecorder-no-sink.https.html Are two almost constant text failure on iOS ToT. They have different DIFF outputs. However, they started to fail very frequently after
253529@main
which makes them related. HISTORY:
https://results.webkit.org/?suite=layout-tests&suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fmediacapture-record%2FMediaRecorder-peerconnection.https.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fmediacapture-record%2FMediaRecorder-no-sink.https.html
DIFF (imported/w3c/web-platform-tests/mediacapture-record/MediaRecorder-peerconnection.https.html): @@ -1,21 +1,23 @@ + +Harness Error (TIMEOUT), message = null PASS PeerConnection MediaRecorder receives data after onstart, {"video":true,"audio":false} with format [passthrough]. PASS PeerConnection MediaRecorder gets ondata on stopping recorded tracks {"video":true,"audio":false} with format [passthrough]. -PASS PeerConnection MediaRecorder receives data after onstart, {"video":false,"audio":true} with format [passthrough]. -PASS PeerConnection MediaRecorder gets ondata on stopping recorded tracks {"video":false,"audio":true} with format [passthrough]. -PASS PeerConnection MediaRecorder receives data after onstart, {"video":true,"audio":true} with format [passthrough]. -PASS PeerConnection MediaRecorder gets ondata on stopping recorded tracks {"video":true,"audio":true} with format [passthrough]. -FAIL PeerConnection MediaRecorder receives data after onstart, {"video":false,"audio":true} with format video/webm;codecs=vp8. promise_test: Unhandled rejection with value: object "NotSupportedError: mimeType is not supported" -FAIL PeerConnection MediaRecorder gets ondata on stopping recorded tracks {"video":false,"audio":true} with format video/webm;codecs=vp8. promise_test: Unhandled rejection with value: object "NotSupportedError: mimeType is not supported" -FAIL PeerConnection MediaRecorder receives data after onstart, {"video":true,"audio":false} with format video/webm;codecs=vp8. promise_test: Unhandled rejection with value: object "NotSupportedError: mimeType is not supported" -FAIL PeerConnection MediaRecorder gets ondata on stopping recorded tracks {"video":true,"audio":false} with format video/webm;codecs=vp8. promise_test: Unhandled rejection with value: object "NotSupportedError: mimeType is not supported" -FAIL PeerConnection MediaRecorder receives data after onstart, {"video":true,"audio":true} with format video/webm;codecs=vp8. promise_test: Unhandled rejection with value: object "NotSupportedError: mimeType is not supported" -FAIL PeerConnection MediaRecorder gets ondata on stopping recorded tracks {"video":true,"audio":true} with format video/webm;codecs=vp8. promise_test: Unhandled rejection with value: object "NotSupportedError: mimeType is not supported" -FAIL PeerConnection MediaRecorder receives data after onstart, {"video":false,"audio":true} with format video/webm;codecs=vp9. promise_test: Unhandled rejection with value: object "NotSupportedError: mimeType is not supported" -FAIL PeerConnection MediaRecorder gets ondata on stopping recorded tracks {"video":false,"audio":true} with format video/webm;codecs=vp9. promise_test: Unhandled rejection with value: object "NotSupportedError: mimeType is not supported" -FAIL PeerConnection MediaRecorder receives data after onstart, {"video":true,"audio":false} with format video/webm;codecs=vp9. promise_test: Unhandled rejection with value: object "NotSupportedError: mimeType is not supported" -FAIL PeerConnection MediaRecorder gets ondata on stopping recorded tracks {"video":true,"audio":false} with format video/webm;codecs=vp9. promise_test: Unhandled rejection with value: object "NotSupportedError: mimeType is not supported" -FAIL PeerConnection MediaRecorder receives data after onstart, {"video":true,"audio":true} with format video/webm;codecs=vp9. promise_test: Unhandled rejection with value: object "NotSupportedError: mimeType is not supported" -FAIL PeerConnection MediaRecorder gets ondata on stopping recorded tracks {"video":true,"audio":true} with format video/webm;codecs=vp9. promise_test: Unhandled rejection with value: object "NotSupportedError: mimeType is not supported" +TIMEOUT PeerConnection MediaRecorder receives data after onstart, {"video":false,"audio":true} with format [passthrough]. Test timed out +NOTRUN PeerConnection MediaRecorder gets ondata on stopping recorded tracks {"video":false,"audio":true} with format [passthrough]. +NOTRUN PeerConnection MediaRecorder receives data after onstart, {"video":true,"audio":true} with format [passthrough]. +NOTRUN PeerConnection MediaRecorder gets ondata on stopping recorded tracks {"video":true,"audio":true} with format [passthrough]. +NOTRUN PeerConnection MediaRecorder receives data after onstart, {"video":false,"audio":true} with format video/webm;codecs=vp8. +NOTRUN PeerConnection MediaRecorder gets ondata on stopping recorded tracks {"video":false,"audio":true} with format video/webm;codecs=vp8. +NOTRUN PeerConnection MediaRecorder receives data after onstart, {"video":true,"audio":false} with format video/webm;codecs=vp8. +NOTRUN PeerConnection MediaRecorder gets ondata on stopping recorded tracks {"video":true,"audio":false} with format video/webm;codecs=vp8. +NOTRUN PeerConnection MediaRecorder receives data after onstart, {"video":true,"audio":true} with format video/webm;codecs=vp8. +NOTRUN PeerConnection MediaRecorder gets ondata on stopping recorded tracks {"video":true,"audio":true} with format video/webm;codecs=vp8. +NOTRUN PeerConnection MediaRecorder receives data after onstart, {"video":false,"audio":true} with format video/webm;codecs=vp9. +NOTRUN PeerConnection MediaRecorder gets ondata on stopping recorded tracks {"video":false,"audio":true} with format video/webm;codecs=vp9. +NOTRUN PeerConnection MediaRecorder receives data after onstart, {"video":true,"audio":false} with format video/webm;codecs=vp9. +NOTRUN PeerConnection MediaRecorder gets ondata on stopping recorded tracks {"video":true,"audio":false} with format video/webm;codecs=vp9. +NOTRUN PeerConnection MediaRecorder receives data after onstart, {"video":true,"audio":true} with format video/webm;codecs=vp9. +NOTRUN PeerConnection MediaRecorder gets ondata on stopping recorded tracks {"video":true,"audio":true} with format video/webm;codecs=vp9. DIFF (imported/w3c/web-platform-tests/mediacapture-record/MediaRecorder-no-sink.https.html): @@ -1,5 +1,7 @@ -PASS PeerConnection MediaRecorder records audio from PeerConnection without sinks -PASS PeerConnection MediaRecorder records video from PeerConnection without sinks -PASS PeerConnection MediaRecorder records audio/video from PeerConnection without sinks +Harness Error (TIMEOUT), message = null +TIMEOUT PeerConnection MediaRecorder records audio from PeerConnection without sinks Test timed out +NOTRUN PeerConnection MediaRecorder records video from PeerConnection without sinks +NOTRUN PeerConnection MediaRecorder records audio/video from PeerConnection without sinks +
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-08-22 10:25:29 PDT
<
rdar://problem/98987676
>
Hercules Hjalmarsson
Comment 2
2022-08-22 10:27:54 PDT
This issue can be bisected to
253529@main
using command: run-webkit-tests --ios-simulator --iterations=2 imported/w3c/web-platform-tests/mediacapture-record/MediaRecorder-peerconnection.https.html
EWS
Comment 3
2022-08-22 11:34:08 PDT
Test gardening commit
253654@main
(eafb9636101f): <
https://commits.webkit.org/253654@main
> Reviewed commits have been landed. Closing PR #3546 and removing active labels.
youenn fablet
Comment 4
2022-08-25 06:54:37 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/3546
youenn fablet
Comment 5
2022-08-25 07:00:28 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/3653
EWS
Comment 6
2022-08-29 09:43:59 PDT
Committed
253907@main
(64285901cd49): <
https://commits.webkit.org/253907@main
> Reviewed commits have been landed. Closing PR #3653 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug